--- a/headphones/1-styles.css
+++ b/headphones/1-styles.css
@@ -1,3 +1,6 @@
+body {
+  max-width: 1000px;
+}
 .firstpage {
   width: 1000px;
   margin: 0 auto;
@@ -11,6 +14,7 @@
   background-repeat: no-repeat;
   background-size: cover;
   border: 1px solid #979797;
+  object-fit: contain;
 }
 .logo {
   width: 161px;
@@ -18,7 +22,9 @@
   top: 27.76px;
   margin-top: 20px;
   margin-left: 30px;
-  
+}
+.logo i{
+  display: none;
 }
 ul {
   display: inline;
@@ -27,6 +33,8 @@ ul {
   margin-left: 600px;
   margin-top: -1.5px;
   white-space: nowrap;
+  font-family: Source Sans Pro;
+
 }
 ul li a {
   width: 255px;
@@ -44,7 +52,7 @@ ul li a {
   gap: 0px;
   opacity: 0px;
 }
-#call h1 {
+.parone {
   width: 578px;
   height: 40px;
   left: 29px;
@@ -85,7 +93,7 @@ button {
   top: 100px;
   left: 237px;
   gap: 0px;
-  opacity: 0px;
+  opacity: 0.9px;
   box-shadow: 0px 2px 20px 0px #00000080;
   background: #ff6565;
   border-radius: 30px;
@@ -93,8 +101,9 @@ button {
   margin-left: 390px;
   margin-top: 150px;
   transform: translateY(-40px);
+  border: none;
 }
- button:hover, button:active{
+ button:hover {
     opacity: 0.9
     #FF6565
 }
@@ -112,28 +121,70 @@ button {
   color: #ffffff;
   margin-left: 160px;
 }
-/*mobile phone*/
-@media only screen and(max-width:480px) {
-    .firstpage{
-        width: 100%;
-        margin: 0 auto;
-        
-    }
-    .background {
-        width: 100%;
-       
-      }   
-    .logo {
-        width: 161px;
-        height: 32px;
-}
-ul {
-    display:none;
-    
-}
-#call {
+@media all and (max-width: 375px) {
+  /* styles for screen with max width 375px */
+  body, html {
     width: 100%;
-    height: 313px;
-
+    overflow-x: hidden;
+    margin: 0;
+  }
+ .firstpage {
+    width: 100%;
+    margin: 0 auto;
+  }
+ .background {
+    width: 100%;
+    margin: 0 auto;
+    height: auto; /* adjust height to fit content */
+  }
+ .logo {
+    width: 80px;
+    height: 20px;
+    margin-top: 10px;
+    margin-left: 15px;
+  }
+  ul {
+    flex-direction: column;
+    margin-left: 0;
+    margin-top: 0;
+  }
+  ul li a {
+    width: 100%;
+    height: auto;
+    margin-top: 10px;
+    margin-left: 0;
+  }
+  #call {
+    width: 100%;
+    height: auto;
+    margin-left: 0;
+    margin-top: 20px;
+  }
+ .parone {
+    width: 100%;
+    height: auto;
+    margin-left: 0;
+    margin-top: 20px;
+    font-size: 24px;
+  }
+  h2 {
+    width: 100%;
+    height: auto;
+    margin-left: 0;
+    margin-top: 10px;
+    font-size: 18px;
+  }
+  button {
+    width: 100px;
+    height: 30px;
+    margin-left: 0;
+    margin-top: 20px;
+  }
+  #call p {
+    width: 100%;
+    height: auto;
+    margin-left: 0;
+    margin-top: 10px;
+    font-size: 14px;
   }
 }
