--- a/headphones/0-styles.css
+++ b/headphones/0-styles.css
@@ -1,20 +1,22 @@
 body {
-  max-width: 1000px;
+  max-width: 1400px;
+  margin: 0 auto;
 }
 .firstpage {
-  width: 1000px;
+  width: 1400px;
   margin: 0 auto;
-
 }
 .background {
-  width: 1000px;
+  width: 1400px;
   margin: 0 auto;
   height: 800px;
   background-image: url(headphones_hero_1.jpg);
   background-repeat: no-repeat;
   background-size: cover;
   border: 1px solid #979797;
-  object-fit: contain;
+}
+header {
+  position: fixed;
 }
 .logo {
   width: 161px;
@@ -23,18 +25,16 @@ body {
   margin-top: 20px;
   margin-left: 30px;
 }
-.logo i{
+.logo i {
   display: none;
 }
 ul {
-  display: inline;
   list-style: none;
   display: flex;
-  margin-left: 600px;
+  margin-left: 700px;
   margin-top: -1.5px;
   white-space: nowrap;
   font-family: Source Sans Pro;
-
 }
 ul li a {
   width: 255px;
@@ -51,6 +51,7 @@ ul li a {
   left: 66px;
   gap: 0px;
   opacity: 0px;
+  margin-left: 150px;
 }
 .parone {
   width: 578px;
@@ -68,7 +69,6 @@ ul li a {
   margin-top: 200px;
   white-space: nowrap;
   transform: translateY(80px);
-
 }
 h2 {
   width: 355px;
@@ -85,7 +85,6 @@ h2 {
   color: #ffffff;
   margin-left: 270px;
   transform: translateY(50px);
- 
 }
 button {
   width: 162px;
@@ -103,9 +102,8 @@ button {
   transform: translateY(-40px);
   border: none;
 }
- button:hover {
-    opacity: 0.9
-    #FF6565
+button:hover {
+  opacity: 0.9 #ff6565;
 }
 #call p {
   width: 637px;
@@ -120,71 +118,4 @@ button {
   text-align: center;
   color: #ffffff;
   margin-left: 160px;
-}
-@media all and (max-width: 375px) {
-  /* styles for screen with max width 375px */
-  body, html {
-    width: 100%;
-    overflow-x: hidden;
-    margin: 0;
-  }
- .firstpage {
-    width: 100%;
-    margin: 0 auto;
-  }
- .background {
-    width: 100%;
-    margin: 0 auto;
-    height: auto; /* adjust height to fit content */
-  }
- .logo {
-    width: 80px;
-    height: 20px;
-    margin-top: 10px;
-    margin-left: 15px;
-  }
-  ul {
-    flex-direction: column;
-    margin-left: 0;
-    margin-top: 0;
-  }
-  ul li a {
-    width: 100%;
-    height: auto;
-    margin-top: 10px;
-    margin-left: 0;
-  }
-  #call {
-    width: 100%;
-    height: auto;
-    margin-left: 0;
-    margin-top: 20px;
-  }
- .parone {
-    width: 100%;
-    height: auto;
-    margin-left: 0;
-    margin-top: 20px;
-    font-size: 24px;
-  }
-  h2 {
-    width: 100%;
-    height: auto;
-    margin-left: 0;
-    margin-top: 10px;
-    font-size: 18px;
-  }
-  button {
-    width: 100px;
-    height: 30px;
-    margin-left: 0;
-    margin-top: 20px;
-  }
-  #call p {
-    width: 100%;
-    height: auto;
-    margin-left: 0;
-    margin-top: 10px;
-    font-size: 14px;
-  }
 }
