--- a/headphones/0-styles.css
+++ b/headphones/0-styles.css
@@ -1,121 +1,209 @@
-body {
-  max-width: 1400px;
-  margin: 0 auto;
-}
-.firstpage {
+#page-one {
   width: 1400px;
-  margin: 0 auto;
-}
-.background {
-  width: 1400px;
-  margin: 0 auto;
   height: 800px;
+  gap: 0px;
+  opacity: 0px;
   background-image: url(headphones_hero_1.jpg);
-  background-repeat: no-repeat;
   background-size: cover;
-  border: 1px solid #979797;
 }
-header {
-  position: fixed;
+body {
+  text-align: center;
 }
-.logo {
-  width: 161px;
+#nav {
+  display: flex;
+  width: 1000.39px;
   height: 32px;
-  top: 27.76px;
-  margin-top: 20px;
-  margin-left: 30px;
+  color: #f1f1f1;
+  align-items: center;
+  margin-left: 200px;
+  padding-top: 40px;
+  gap: 40;
+  justify-content: space-between;
 }
-.logo i {
+.nav-tags ul li {
+  display: inline;
+  margin-right: 30px;
+}
+a {
+  text-decoration: none;
+  color: #f1f1f1;
+  font-family: Source Sans Pro;
+  font-size: 12px;
+  font-weight: 700;
+  line-height: 15.08px;
+}
+ul li a:hover {
+  color: #ff6565;
+  cursor: pointer;
+}
+#page-one header i {
   display: none;
 }
-ul {
-  list-style: none;
-  display: flex;
-  margin-left: 700px;
-  margin-top: -1.5px;
-  white-space: nowrap;
-  font-family: Source Sans Pro;
-}
-ul li a {
-  width: 255px;
-  height: 15px;
-  top: 37px;
-  gap: 0px;
-  opacity: 0px;
-  color: #ffffff;
-  text-decoration: none;
-}
-#call {
-  width: 637px;
-  height: 313px;
-  left: 66px;
-  gap: 0px;
-  opacity: 0px;
-  margin-left: 150px;
-}
-.parone {
-  width: 578px;
-  height: 40px;
-  left: 29px;
-  gap: 0px;
-  opacity: 0px;
+h1 {
   font-family: Source Sans Pro;
   font-size: 32px;
   font-weight: 700;
+  margin-top: 250px;
   line-height: 40.22px;
+  color: #f1f1f1;
   text-align: center;
-  color: #ffffff;
-  margin-left: 170px;
-  margin-top: 200px;
-  white-space: nowrap;
-  transform: translateY(80px);
 }
-h2 {
-  width: 355px;
-  height: 20px;
-  top: 100px;
-  left: 141px;
-  gap: 0px;
-  opacity: 0px;
+p {
+  /* margin-top:10px; */
+  text-align: center;
+  transform: translateY(-20px);
+  color: #f1f1f1;
   font-family: Source Sans Pro;
   font-size: 16px;
   font-weight: 700;
   line-height: 20.11px;
-  text-align: center;
-  color: #ffffff;
-  margin-left: 270px;
-  transform: translateY(50px);
 }
-button {
+#btn {
   width: 162px;
   height: 44px;
-  top: 100px;
-  left: 237px;
-  gap: 0px;
-  opacity: 0.9px;
-  box-shadow: 0px 2px 20px 0px #00000080;
+  margin-top: 40px;
+  text-align: center;
+  font-family: Source Sans Pro;
+  font-size: 14px;
+  font-weight: 700;
+  color: #f1f1f1;
+  line-height: 17.6px;
   background: #ff6565;
-  border-radius: 30px;
-  color: #ffffff;
-  margin-left: 390px;
-  margin-top: 150px;
-  transform: translateY(-40px);
+  border-radius: 20px;
   border: none;
+  align-items: center;
 }
-button:hover {
-  opacity: 0.9 #ff6565;
+.p-one {
+  text-align: center;
+  color: #f1f1f1;
+  font-family: Source Sans Pro;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 26px;
+  padding-left: 350px;
+  padding-right: 350px;
+  transform: translateY(50px);
 }
-#call p {
-  width: 637px;
-  height: 104px;
-  top: 209px;
-  gap: 0px;
-  opacity: 0px;
+#sidebar-active {
+  display: none;
+}
+.open-button {
+  display: none;
+}
+
+@media screen and (max-width: 768px) {
+  #page-one {
+    width: 100%;
+    height: 700px;
+    background-image: url(headphones_hero_1.jpg);
+    background-size: cover;
+  }
+
+  #nav {
+    display: flex;
+    width: 100%;
+    height: 20px;
+    color: #f1f1f1;
+    align-items: center;
+    margin-left: 10px;
+    padding-top: 40px;
+    justify-content: space-around;
+  }
+  .p-one {
+    text-align: center;
+    color: #f1f1f1;
+    font-family: Source Sans Pro;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 26px;
+    padding-left: 50px;
+    padding-right: 50px;
+    transform: translateY(50px);
+  }
+}
+@media (max-width: 375px) {
+  #page-one {
+    width: 100%;
+    height: 880px;
+    background-image: url(headphones_hero_1.jpg);
+    background-size: cover;
+    background-position: center;
+  }
+  #nav {
+    display: block;
+    width: 100%;
+    height: 32px;
+    color: #f1f1f1;
+    align-items: center;
+    margin-left: 20px;
+    padding-top: 40px;
+    gap: 40;
+    position: absolute;
+    text-align: center;
+    justify-content: center;
+  }
+  .nav-tags ul li {
+    display: none;
+    line-height: 50px;
+    letter-spacing: 1px;
+  }
+  #page-one header i {
+    margin-right: 260px;
+    transform: translateY(80px);
+    display: block;
+  }
+  .open-button {
+    display: block;
+  }
+  #sidebar-active:checked ~ .nav-tags ul li {
+    display: block;
+  }
+}
+#page-two {
+  width: 100%;
+  height: 700px;
+}
+.par-1 {
   font-family: Source Sans Pro;
   font-size: 16px;
   font-weight: 400;
   line-height: 26px;
   text-align: center;
-  color: #ffffff;
-  margin-left: 160px;
+  transform: translateY(20px);
+  color: black;
+  padding-left: 300px;
+  padding-right: 300px;
+}
+.head-one {
+  font-family: Source Sans Pro;
+  font-family: SourceSansPro;
+  font-size: 32px;
+  line-height: 37.5px;
+  text-align: center;
+  color: black;
+  margin-top: 150px;
+}
+.selector {
+  display: flex;
+  transform: translateY(150px);
+  justify-content: space-evenly;
+  justify-content: center;
+}
+.selector p {
+  color: black;
+  font-family: Source Sans Pro;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 26px;
+  text-align: center;
+  padding-left: 50px;
+  padding-right: 50px;
+}
+.selector h1 {
+  width: 207px;
+  height: 26px;
+}
+.music,
+.ear {
+  transform: translateY(20px);
 }
